# nextgen_plugins

./: pyproject.toml
.devcontainer/: Dockerfile.mcp  README.md  devcontainer.json  docker-compose.dev.yml
nextgen_mcp/: README.md  mcp_server.py  requirements.txt  utils.py  utils_rest.py  validations.py
nextgen_plugins/chatbox/: chat.py  chatjs.py  client_utils.py  context.py  logger.py  messages.py  messages_chart.py  messages_chat.py  nrds.py  rest.py  utils_rest.py  validators.py
nextgen_plugins/chatbox/frontend/chatbox/: .env  .env.development  .env.production  CLIENT_PLUGINS_SPEC.md  CUSTOM_PLUGINS.md  MICRO_FRONTENDS_SPEC.md  README.md  SESSION_CONTEXT.md  index.html  package-lock.json  package.json  vite.config.js
nextgen_plugins/chatbox/frontend/chatbox/src/: App.css  App.jsx  FlowpathsPmtilesMap.jsx  PlotlyChart.jsx  chatbox.css  chatbox.jsx  chatbox2.jsx  chatboxEngine.js  chatboxHelpers.js  chatboxMessages.js  index.css  markdownContent.jsx
nextgen_plugins/chatbox/frontend/chatbox/src/components/: ChatErrorPanel.jsx  ChatLog.jsx  ChatMessage.jsx  ContextUsageIndicator.jsx  ModelSelector.css  ModelSelector.jsx  NrdsMessageContent.jsx  ThinkingSwitch.css  ThinkingSwitch.jsx  markdownContent.jsx
nextgen_plugins/chatbox/frontend/chatbox/src/lib/: chatboxConfig.js  chatboxEngine.js  chatboxHelpers.js  chatboxMessages.js  chatboxPanelBridge.js  nrdsMessages.js  nrdsToolCategories.js
nextgen_plugins/chatbox/frontend/chatbox/src/panels/: ChartPanel.jsx  MapPanel.jsx  MarkdownPanel.jsx  (+2 more)
scripts/: setup-mcp.sh
test_mcp/: test_large_catalog_server.py
